AVANCE FINAL - Joe

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
 texto.titulo=CarShop
 texto.autos=Autos
-texto.redes=Redes
+texto.contacto=Contacto
+texto.citas=Citas
+texto.accesorios=Accesorios
+texto.inicioSesion=Iniciar Sesion
