--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,6 @@
 texto.titulo=CarShop
 texto.autos=Cars
-texto.redes=Social Media
+texto.contacto=Contact
+texto.citas=Appointment
+texto.accesorios=Accessories
+texto.inicioSesion=Log In
