AVANCE FINAL - RODRIGO

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,6 @@
 texto.titulo=CarShop
 texto.autos=Cars
 texto.contacto=Contact
-texto.citas=Appointment
+texto.citas=Dating
 texto.accesorios=Accessories
 texto.inicioSesion=Log In
